examples/errors/reference_undeclared_type.ik
type MyStruct struct:
    f1 Int
    f2 NotARealType

fn foo(m MyStruct):
    let x = m.f1
    let y = m.f2

fn main():
    pass
